--- a/style.css
+++ b/style.css
@@ -149,3 +149,10 @@
     border-radius: 10px; /* Optional: Add rounded corners */
   }
   
+  .list .below {
+    opacity: 0.7;
+    z-index: 0;
+    transform: translateY(120px) scale(0.85); /* Move below the main box */
+    pointer-events: none; /* Not clickable */
+    transition: transform 1s, opacity 1s;
+  }
