--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@
   /* Styles for the large image container */
   .large-image-container {
     position: absolute;
-    top: 70%; /* Position below the carousels */
+    top: 45%; /* Position below the carousels */
     left: 50%;
     transform: translateX(-50%);
     text-align: center; /* Center the image horizontally */
@@ -193,4 +193,12 @@
     padding: 4px 12px;
     margin: 0 0 2px 0;
     box-shadow: 0 1px 2px rgba(0,0,0,0.04);
+  }
+  .egg-info-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 6px;
+    margin-bottom: 12px;
+    margin-top: 12px;
   }
